--- a/print_app/docker-compose.yml
+++ b/print_app/docker-compose.yml
@@ -1,3 +1,8 @@
+
+
+
+
+
 version: "3.9"
 
 services:
@@ -11,7 +16,7 @@ services:
       - cups-logs:/var/log/cups
 
   print-api:
-    build: ./print_app
+    build: ./print_api
     container_name: print-api
     ports:
       - "8000:8000"
@@ -24,3 +29,4 @@ services:
 volumes:
   cups-data:
   cups-logs:
+
