--- a/cups/cupsd.conf
+++ b/cups/cupsd.conf
@@ -1,4 +1,4 @@
-LogLevel warn
+LogLevel debug
 MaxLogSize 0
 
 Listen 0.0.0.0:631
@@ -18,16 +18,18 @@ WebInterface Yes
 
 <Location /admin>
   AuthType Basic
+  AuthClass System
+  Require user @SYSTEM
   Order allow,deny
-  Allow from localhost
-  Allow all
+  Allow from all
 </Location>
 
 <Location /admin/conf>
   AuthType Basic
+  AuthClass System
+  Require user @SYSTEM
   Order allow,deny
-  Allow from localhost
-  Allow all
+  Allow from all
 </Location>
 
 <Location /printers>
@@ -35,4 +37,3 @@ WebInterface Yes
   Allow from all
   Allow all
 </Location>
-
