--- a/print_app/Dockerfile
+++ b/print_app/Dockerfile
@@ -1,16 +1,21 @@
 FROM python:3.11-slim
 
+# Устанавливаем зависимости для Pillow
 RUN apt-get update && apt-get install -y \
     libcups2-dev \
+    python3-pil \
+    python3-venv \
+    libjpeg-dev \
+    libfreetype6-dev \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
+
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+COPY   .  .
 
 EXPOSE 8000
 
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
-
